--- a/config.toml
+++ b/config.toml
@@ -76,7 +76,7 @@ weight = 1
 section = ["HTML", "print", "RSS"]
 
 [params]
-copyright = "Backed by VNOpenAI."
+copyright = "Built by Daisykit.AI team with love <3."
 # privacy_policy = "#"
 
 # First one is picked as the Twitter card image if not set on page.
@@ -101,9 +101,9 @@ version = "0.0"
 url_latest_version = "https://daisykit.org"
 
 # Repository configuration (URLs for in-page links to opening issues and suggesting changes)
-github_repo = "https://github.com/VNOpenAI/daisykit"
+github_repo = "https://github.com/Daisykit-AI/daisykit"
 # An optional link to a related project repo. For example, the sibling repository where your product code lives.
-github_project_repo = "https://github.com/VNOpenAI/daisykit"
+github_project_repo = "https://github.com/Daisykit-AI/daisykit"
 
 # Specify a value here if your content directory is not in your repo's root directory
 # github_subdir = ""
@@ -157,12 +157,12 @@ enable = false
 # End user relevant links. These will show up on left side of footer and in the community page if you have one.
 [[params.links.user]]
 	name = "DaisyKit SDK"
-	url = "https://github.com/VNOpenAI/daisykit"
+	url = "https://github.com/Daisykit-AI/daisykit"
 	icon = "fa fa-laptop"
         desc = "Use DaisyKit for Desktop and Embedded."
 [[params.links.user]]
 	name = "DaisyKit Android"
-	url = "https://github.com/VNOpenAI/daisykit-android"
+	url = "https://github.com/Daisykit-AI/daisykit-android"
 	icon = "fa fa-mobile"
         desc = "Use DaisyKit for Android."
 # [[params.links.user]]
@@ -173,7 +173,7 @@ enable = false
 # Developer relevant links. These will show up on right side of footer and in the community page if you have one.
 [[params.links.developer]]
 	name = "GitHub"
-	url = "https://github.com/VNOpenAI/daisykit"
+	url = "https://github.com/Daisykit-AI/daisykit"
 	icon = "fab fa-github"
         desc = "Development takes place here!"
 [[params.links.developer]]
